feat: leave from chat handler
